--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,12 @@
                     Roll RNG
                 </button>
                 <div id="cooldown-display" class="cooldown"></div>
+                <div id="auto-roll-container" class="auto-roll-container">
+                    <label class="auto-roll-label">
+                        <input type="checkbox" id="auto-roll-toggle" onchange="toggleAutoRoll()">
+                        <span>Auto Roll</span>
+                    </label>
+                </div>
             </div>
 
             <div id="last-roll" class="last-roll"></div>
